# aoc2024

./: LICENSE  aoc2024.cabal  build
challenges/: ChallengeUtils.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Utils.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.1/: aoc2024-0.1.0.0-inplace.conf  package.cache
