cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             WTomas
maintainer:         vajdatomi98@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-settings
  build-depends:    
    base ^>=4.20.0.0,
    text,
    containers,
    array
  default-language: Haskell2010

executable day01
  import:           common-settings
  main-is:          Day01.hs
  hs-source-dirs:   challenges
  build-depends:    
    text, 
    count ^>= 0.0.1
  other-modules:    Utils