cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             WTomas
maintainer:         vajdatomi98@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-settings
  build-depends:    
    base ^>=4.20.0.0,
    text,
    containers,
    array
  default-language: Haskell2010

executable day01
  import:           common-settings
  main-is:          Day01.hs
  hs-source-dirs:   challenges
  other-modules:    ChallengeUtils

executable day02
  import:           common-settings
  main-is:          Day02.hs
  hs-source-dirs:   challenges
  other-modules:    ChallengeUtils

executable day03
  import:           common-settings
  main-is:          Day03.hs
  hs-source-dirs:   challenges
  other-modules:    ChallengeUtils

executable day04
  import:           common-settings
  main-is:          Day04.hs
  hs-source-dirs:   challenges
  other-modules:    ChallengeUtils

executable day05
  import:           common-settings
  main-is:          Day05.hs
  hs-source-dirs:   challenges
  other-modules:    ChallengeUtils

executable day06
  import:           common-settings
  main-is:          Day06.hs
  hs-source-dirs:   challenges
  other-modules:    ChallengeUtils

executable day07
  import:           common-settings
  main-is:          Day07.hs
  hs-source-dirs:   challenges
  other-modules:    ChallengeUtils